<resources>
    <string name="app_name">B-reminder</string>
    <string name="feature_title">Monitoramento Bluetooth</string>

    <string name="toggle_timeout_notifier_title">Monitoramento Inteligente</string>
    <string name="toggle_timeout_notifier_desc">Receber uma notificação quando um dispositivo Bluetooth desconectar por falta de sinal.</string>

    <string name="toggle_safe_zone_title">Zona Segura (WiFi)</string>
    <string name="toggle_safe_zone_desc">Desativar o Monitoramento Inteligente enquanto estiver conectado em Wifi confiáveis.</string>
    <string name="wifi_safe_zone_list">Redes Wifi da Zona Segura:</string>
</resources>